# video-helper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LISEZMOI.md  PAYSAGE.md  README.md  SPEED_ANALYSIS.md  TRIGGERS.md  environment.yml  manual_poetry.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_to_toml.py  setup.py
.github/workflows/: ci.yml
assets/: landscape.csv  manual_poetry.sh  paysage.csv  requirements_to_toml.py
scripts/: benchmark_extract_frames.py
skills/: README.md
skills/video-helper/: SKILL.md
skills/video-helper/references/: cli-reference.md  surfaces.md  triggers.md
tests/: __init__.py  test_api.py  test_cli.py  test_extract_frames_backends.py  test_mcp.py  test_pipeline.py  test_url_support.py  test_v15_features.py  test_video_helper.py
video_helper/: __init__.py  api.py  cli_argparse.py  cli_click.py  gui.py  main.py  mcp.py
