[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-helper"
version = "1.6.0"
description = "Video Helper — utility functions for video processing exposed as library, argparse CLI, click CLI, FastAPI HTTP surface, and MCP tools. Validation, format conversion, frame extraction (multi-backend dispatcher: VidGear / PyAV / ffmpeg-pipe), HTTP-headers passthrough, exact-size output with aspect-preserving padding, subtitle conversion (SRT/VTT/CSS), and pipeline primitives (black video, image loop, concat, overlay, audio mux, subtitle burn)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Warith HARCHAOUI", email = "warithmetics@deraison.ai"},
]
keywords = ["video", "ffmpeg", "opencv", "pyav", "vidgear", "frames", "subtitles", "extraction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "os-helper @ git+https://github.com/warith-harchaoui/os-helper.git@v1.3.0",
    "opencv-python>=4.10.0.84,<5",
    "ffmpeg-python>=0.2.0,<0.3",
    "vidgear>=0.3.3,<1",
]

[project.optional-dependencies]
# PyAV unlocks the windowed-sequential + sparse PyAV backend (best default
# for those access patterns — see SPEED_ANALYSIS.md). Without it the
# dispatcher falls back to VidGear / ffmpeg-pipe.
pyav = ["av>=12,<18"]
# Torch unlocks destination="torch" (NCHW/CTHW RGB on cpu/mps/cuda).
torch = ["torch>=2.0,<3"]
# Pillow unlocks destination="pil" (PIL.Image RGB, size=(W, H)).
pil = ["pillow>=10,<12"]
# CLI-only-with-click extra. The argparse variant needs no runtime dep
# and is always available.
cli = ["click>=8.1,<9"]
# FastAPI HTTP surface (video_helper.api). uvicorn + python-multipart
# so multipart file uploads work out of the box.
api = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]
# MCP surface (video_helper.mcp). Depends on the `api` extra
# — fastapi-mcp wraps the FastAPI app.
mcp = [
    "fastapi-mcp>=0.3,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]
all = ["av>=12,<18", "torch>=2.0,<3", "pillow>=10,<12"]
# `dev` keeps the bar low for CI — pytest + httpx (for FastAPI TestClient)
# + click (so the click CLI import always resolves in tests) + api / mcp
# so smoke tests exercise every surface.
dev = [
    "pytest>=8",
    "av>=12,<18",
    "httpx>=0.27",
    "click>=8.1,<9",
    "fastapi>=0.111,<1",
    "python-multipart>=0.0.9,<1",
    "fastapi-mcp>=0.3,<1",
]

[project.scripts]
# argparse-based CLI — no runtime dep beyond stdlib + core package.
video-helper = "video_helper.cli_argparse:main"
# click-based twin — install with [cli] extra.
video-helper-click = "video_helper.cli_click:cli"
# MCP server (over FastAPI) — install with [api,mcp] extras.
video-helper-mcp = "video_helper.mcp:main"

[project.urls]
Homepage = "https://github.com/warith-harchaoui/video-helper"
Issues = "https://github.com/warith-harchaoui/video-helper/issues"

[tool.setuptools.packages.find]
include = ["video_helper*"]
exclude = ["tests*", "assets*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["assets", "tests"]

[tool.ruff.lint]
# Conservative starter set: pyflakes (F), pycodestyle errors (E), warnings (W),
# isort (I), bugbear (B), comprehensions (C4), pyupgrade (UP), simplify (SIM).
# Easy to tighten later; this is the baseline.
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",  # line-too-long — handled by formatter / context-dependent
    "B008",  # function call in argument default — too noisy for our style
    "SIM108",  # ternary preferred over if/else — sometimes hurts readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False in pytest is fine
